# DarkOS_IPC

./: .gitignore  CMakeLists.txt  build.sh
applications/: Makefile  config.mk  option.mk
applications/default_app/: CMakeLists.txt  app_runtime_config.h  main.cpp
applications/default_app/include/: app_camera.h  app_mem.h
applications/default_app/src/: app_camera.cpp
components/core/device_config/include/: pg_device_config.h
components/core/device_config/src/: pg_device_config.c
components/core/event_bus/: CMakeLists.txt
components/core/event_bus/include/: pg_event_bus.h
components/core/hal/include/: hal_camera.h
components/core/hal/src/: hal_camera_stub.cpp
components/core/utils/: CMakeLists.txt
components/core/utils/common/src/: com_mem_monitor.cpp
components/core/utils/json/: CMakeLists.txt
components/core/utils/json/include/: pg_json.h
components/core/utils/json/src/: pg_json.c
components/hal/: CMakeLists.txt
components/hal/include/: hal_camera.h
components/network_stack/: CMakeLists.txt
components/network_stack/onvif/: CMakeLists.txt
components/network_stack/onvif/include/: pg_onvif.h
components/network_stack/onvif/src/: pg_onvif.c
components/utils/common/: CMakeLists.txt
components/utils/common/include/: com_mem_monitor.h
components/utils/common/src/: com_mem_monitor.cpp
components/utils/log/: CMakeLists.txt
components/utils/log/include/: log_system.h
components/utils/log/src/: log_system.cpp
configs/: device_rk3576_cam_v1.json  device_x86_usb_cam_v1.json
core/device_config/: CMakeLists.txt
core/device_config/src/: pg_device_config.c
core/event_bus/include/: pg_event_types.h
core/event_bus/src/: pg_event_bus.c
core/hal/: CMakeLists.txt
platform/configs/: device_rk3576_cam_v1.json
platform/rk3588s/: CMakeLists.txt  toolchain.cmake
platform/rk3588s/bsp/include/rk_media/: rk_comm_ivs.h
platform/rk3588s/port/src/: hal_camera_port.c
platform/rv1126b/: CMakeLists.txt
platform/x86/: CMakeLists.txt
platform/x86/bsp/flex/lib/: libfl.la  libfl.so.2.0.0
platform/x86/bsp/gsoap/lib/pkgconfig/: gsoap++.pc  gsoap.pc  gsoapck++.pc  gsoapck.pc  gsoapssl++.pc  gsoapssl.pc
platform/x86/bsp/openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
platform/x86/bsp/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
platform/x86/port/src/: hal_camera_linux.c  hal_camera_port.c  hal_camera_win.cpp
products/cam_ai/: app_runtime_config.cpp  app_runtime_config.h
products/cam_ai/src/: app_mem.cpp
products/cam_basic/: CMakeLists.txt  app_runtime_config.cpp  app_runtime_config.h  main.cpp  product.cmake
products/cam_basic/src/: app_camera.cpp
products/cam_streaming/: CMakeLists.txt  main.cpp
temp/: onvif.sh
tools/: README.md  build.sh  compile.sh  deploy.sh  download.sh  trim_gsoap.sh
